Bug 317050 - Debugger "forget", that breakpoints are inactive (disable) and run it
Summary: Debugger "forget", that breakpoints are inactive (disable) and run it
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: CPP Debugger (other bugs)
Version First Reported In: git master
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2013-03-19 23:22 UTC by Piotr Mierzwinski
Modified: 2013-06-26 19:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Mierzwinski 2013-03-19 23:22:37 UTC
After setting breakpoints and disabled all or any, debugger breaks application on inactive breakpoint(s).
It's very annoying for each start (in debug mode) application with inactive breakpoints
Workaround.
After application stops on first inactive breakpoint then in breakpoint view can double click on each inactive breakpoint: activating and deactivating it. Now might click on "Continue start" and disabled breakpoint should be skipped.

Reproducible: Always

Steps to Reproduce:
1. start application in debug mode
2. set few or one breakpoint(s)
3. application stops on breakpoint
4. disable all or few/one breakpoint(s)
5. stop application (calling stop individual jobs)
6. start again application in debug mode
Actual Results:  
application stops on disabled breakpoint

Expected Results:  
application should not to stop at any disabled breakpoint
Comment 1 Aleix Pol 2013-06-12 01:35:06 UTC
Niko? ideas?
Comment 2 Kevin Funk 2013-06-25 11:59:56 UTC
Patch in the pipeline: https://git.reviewboard.kde.org/r/111214/