Make disabled breakpoints REALLY disabled.

If there is disabled breakpoints, when we start a new debug session they work not the way they should.

BUG: 317050
REVIEW: 111214